--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # compiled output
 /dist
 /node_modules
-
+./.env
 # Logs
 logs
 *.log
@@ -34,4 +34,3 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 db-data
-.env
