--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
+    "resend": "^2.0.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
